--- a/data/preprocess.ipynb
+++ b/data/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(name_csv)"
+    "df = pd.read_csv(\"./checkins_separated/\"+name_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[111796 rows x 18 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "array([  58735,    9426,   69067, ..., 2679706, 2236670,  234961])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[56720 rows x 26 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "3355"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "(-73.8183464628, -71.6955031732, 40.950976034515, 42.089271049184994)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "[21708 rows x 4 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "[56714 rows x 5 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
        "[56714 rows x 5 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "Name: d, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1654,7 @@
        "[20670 rows x 5 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,17 +1668,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_csv = \"train_\" + name_csv\n",
-    "test_csv = \"test_\" + name_csv"
+    "train_csv = \"train/train_\" + name_csv\n",
+    "test_csv = \"test/test_\" + name_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
