--- a/notebooks/sep_train_test.ipynb
+++ b/notebooks/sep_train_test.ipynb
@@ -2,9 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (3.8.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (4.50.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: numpy<2,>=1.21 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (23.2)\n",
+      "Requirement already satisfied: pillow>=8 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (10.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/alvaro/Documentos/GitHub/LP-BERT/lpbert/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,161 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>uid</th>\n",
-       "      <th>t</th>\n",
-       "      <th>d</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>41.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50001</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>41.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>50001</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>41.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>41.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>50001</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>41.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3128</th>\n",
-       "      <td>50129</td>\n",
-       "      <td>31</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3129</th>\n",
-       "      <td>50129</td>\n",
-       "      <td>4</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3130</th>\n",
-       "      <td>50129</td>\n",
-       "      <td>7</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3131</th>\n",
-       "      <td>50129</td>\n",
-       "      <td>11</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3132</th>\n",
-       "      <td>50129</td>\n",
-       "      <td>23</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>18.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3133 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        uid   t     d      x     y\n",
-       "0     50001   1   1.0  122.0  41.0\n",
-       "1     50001   2   1.0  123.0  41.0\n",
-       "2     50001   5   1.0  123.0  41.0\n",
-       "3     50001  12   1.0  123.0  41.0\n",
-       "4     50001  15   1.0  122.0  41.0\n",
-       "...     ...  ..   ...    ...   ...\n",
-       "3128  50129  31  30.0   40.0  19.0\n",
-       "3129  50129   4  31.0   42.0  19.0\n",
-       "3130  50129   7  32.0   42.0  19.0\n",
-       "3131  50129  11  33.0   42.0  18.0\n",
-       "3132  50129  23  34.0   42.0  18.0\n",
-       "\n",
-       "[3133 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muid\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m df\n\u001b[1;32m      3\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
     "df.columns = ['uid', 't', 'd', 'x', 'y']\n",
-    "df"
+    "df\n",
+    "df['d'].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
