--- a/data/teste.ipynb
+++ b/data/teste.ipynb
@@ -11,37 +11,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "199"
+       "8553"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('train/train_checkins_Connecticut.csv')\n",
-    "df['x'].max()"
+    "df = pd.read_csv('train/train_checkins_Nebraska.csv')\n",
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "93"
+       "8617"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('test/test_checkins_Nebraska.csv')\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +73,7 @@
     "df2 = df.sample(3000)\n",
     "df3 = df.sample(3000)\n",
     "df['d'].max()\n",
-    "df['y'].max()"
+    "df['t'].max()"
    ]
   },
   {
@@ -63,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "45"
       ]
      },
      "execution_count": 4,
@@ -76,7 +97,7 @@
     "df.describe()\n",
     "df2 = df.sample(3000)\n",
     "df3 = df.sample(3000)\n",
-    "df['d'].max()"
+    "df['t'].max()"
    ]
   },
   {
