--- a/data/teste.ipynb
+++ b/data/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8553"
+       "2476"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('train/train_checkins_Nebraska.csv')\n",
+    "df = pd.read_csv('train/train2_checkins_Nebraska.csv')\n",
     "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_nunique = df['uid'].nunique()\n",
+    "print(num_nunique)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        uid  counts\n",
+      "0      9324     120\n",
+      "3     31438     120\n",
+      "36  2150760     119\n",
+      "30   861702     107\n",
+      "5     54414     105\n",
+      "31  1195221     104\n",
+      "10   137721     102\n",
+      "2     13597      95\n",
+      "9    125817      91\n",
+      "26   303487      89\n",
+      "17   217605      88\n",
+      "6     55704      87\n",
+      "25   291734      80\n",
+      "15   174066      72\n",
+      "37  2153587      71\n",
+      "35  2130033      68\n",
+      "4     42003      64\n",
+      "33  1327490      60\n",
+      "21   252329      57\n",
+      "24   263269      54\n",
+      "7     76687      51\n",
+      "32  1303988      48\n",
+      "18   234506      47\n",
+      "23   262014      45\n",
+      "19   246615      44\n",
+      "11   138176      44\n",
+      "1     11374      43\n",
+      "16   208590      43\n",
+      "27   334602      39\n",
+      "29   396859      39\n",
+      "12   138894      39\n",
+      "14   158437      38\n",
+      "13   157093      36\n",
+      "8     79714      36\n",
+      "22   255904      33\n",
+      "28   374346      33\n",
+      "20   248214      30\n",
+      "34  2129847      27\n",
+      "38  2157470       8\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = df.groupby('uid').size().reset_index(name='counts')\n",
+    "count_sorted = count.sort_values(by='counts', ascending=False)\n",
+    "# count = count_sorted['counts'] > 120\n",
+    "# # Imprimir o resultado\n",
+    "print(count_sorted)\n",
+    "# # Contar o número de registros por usuário\n",
+    "# count = df.groupby('uid').size().reset_index(name='counts')\n",
+    "\n",
+    "# # Filtrar os usuários que têm no máximo 200 registros\n",
+    "# filtered_uids = count.query('counts <= 200')['uid']\n",
+    "\n",
+    "# # Fazer merge com o DataFrame original para obter apenas os dados filtrados\n",
+    "# filtered_df = df[df['uid'].isin(filtered_uids)]\n",
+    "\n",
+    "# # Imprimir o resultado\n",
+    "# print(filtered_uids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +130,7 @@
        "8617"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +151,7 @@
        "45"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +176,7 @@
        "45"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -166,25 +255,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>2882.481000</td>\n",
-       "      <td>5.751106e+05</td>\n",
-       "      <td>18.077667</td>\n",
-       "      <td>5.361000</td>\n",
-       "      <td>110.523667</td>\n",
-       "      <td>41.357667</td>\n",
+       "      <td>2878.045667</td>\n",
+       "      <td>5.851957e+05</td>\n",
+       "      <td>18.107667</td>\n",
+       "      <td>5.433667</td>\n",
+       "      <td>109.519333</td>\n",
+       "      <td>41.626000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1650.205711</td>\n",
-       "      <td>8.070725e+05</td>\n",
-       "      <td>14.214394</td>\n",
-       "      <td>4.090182</td>\n",
-       "      <td>33.354714</td>\n",
-       "      <td>11.693673</td>\n",
+       "      <td>1669.239878</td>\n",
+       "      <td>8.182638e+05</td>\n",
+       "      <td>14.335035</td>\n",
+       "      <td>4.052622</td>\n",
+       "      <td>32.877418</td>\n",
+       "      <td>11.615784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.890000e+02</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -193,8 +282,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1466.750000</td>\n",
-       "      <td>7.347900e+04</td>\n",
+       "      <td>1425.750000</td>\n",
+       "      <td>7.326600e+04</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>95.000000</td>\n",
@@ -202,8 +291,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2872.500000</td>\n",
-       "      <td>2.221650e+05</td>\n",
+       "      <td>2892.500000</td>\n",
+       "      <td>2.226950e+05</td>\n",
        "      <td>18.000000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>96.000000</td>\n",
@@ -211,8 +300,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>4268.750000</td>\n",
-       "      <td>3.920068e+05</td>\n",
+       "      <td>4315.500000</td>\n",
+       "      <td>4.009600e+05</td>\n",
        "      <td>29.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>107.000000</td>\n",
@@ -234,18 +323,18 @@
       "text/plain": [
        "        Unnamed: 0           uid            t            d            x  \\\n",
        "count  3000.000000  3.000000e+03  3000.000000  3000.000000  3000.000000   \n",
-       "mean   2882.481000  5.751106e+05    18.077667     5.361000   110.523667   \n",
-       "std    1650.205711  8.070725e+05    14.214394     4.090182    33.354714   \n",
-       "min       3.000000  1.890000e+02     0.000000     1.000000     3.000000   \n",
-       "25%    1466.750000  7.347900e+04     5.000000     2.000000    95.000000   \n",
-       "50%    2872.500000  2.221650e+05    18.000000     4.000000    96.000000   \n",
-       "75%    4268.750000  3.920068e+05    29.000000     8.000000   107.000000   \n",
+       "mean   2878.045667  5.851957e+05    18.107667     5.433667   109.519333   \n",
+       "std    1669.239878  8.182638e+05    14.335035     4.052622    32.877418   \n",
+       "min       1.000000  1.890000e+02     0.000000     1.000000     3.000000   \n",
+       "25%    1425.750000  7.326600e+04     5.000000     2.000000    95.000000   \n",
+       "50%    2892.500000  2.226950e+05    18.000000     4.000000    96.000000   \n",
+       "75%    4315.500000  4.009600e+05    29.000000     8.000000   107.000000   \n",
        "max    5778.000000  2.676824e+06    45.000000    15.000000   199.000000   \n",
        "\n",
        "                 y  \n",
        "count  3000.000000  \n",
-       "mean     41.357667  \n",
-       "std      11.693673  \n",
+       "mean     41.626000  \n",
+       "std      11.615784  \n",
        "min       8.000000  \n",
        "25%      41.000000  \n",
        "50%      41.000000  \n",
@@ -253,7 +342,7 @@
        "max      93.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
